<resources>
    <string name="app_name">Fluxcode</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Fluxcode</string>

    <string name="menu_home">Home</string>
    <string name="menu_boards">Boards</string>
    <string name="account">Account</string>
    <string name="menu_login">Login</string>
    <string name="register">Register</string>
    <string name="menu_logout">Logout</string>
    <string name="register_introduction">Register now to get the most out of using this app. \nWe do not charge you for any of the services provided.</string>
    <string name="login_introduction">Login now to get the most out of using this app. \nWe do not charge you for any of the services provided.</string>
    <string name="email_tag">Email</string>
    <string name="username_tag">Username</string>
    <string name="password_tag">Password</string>
    <string name="confirm_password_tag">Confirm password</string>
    <string name="register_confirm">By clicking register, you are in agreement with the Terms and Conditions and our Privacy Policy.</string>
    <string name="home_title">Welcome to CodeApp</string>
    <string name="home_introduction">This is the homepage where we provide you an overview of our most relevant content.\nThank you for visiting and do enjoy your stay!\n\nIf you enjoy this application, don\'t hesitate to sign up or log in!\nBy doing so, you get the ability to like, react, comment and post content!</string>
    <string name="btn_register">Create your free account now!</string>
    <string name="title_featured_posts">Featured Posts</string>
    <string name="action_view">View</string>
    <string name="action_comment">Comment</string>
    <string name="overview_boards">Overview Boards</string>
    <string name="boards_intro">Here\'s an overview of all the boards we have to offer.\nHave fun!</string>
    <string name="boards">Boards</string>
</resources>
